--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,109 @@
 body {
-  background-color: aqua;
+  background-color: #2F2E41;
+  margin: 0;
+  min-height: 100vh;
+  padding: 0;
 }
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 71px 99px 0 99px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  gap: 64px;
+  padding: 0;
+  font-family: 'JetBrains Mono', monospace;
+  color: #C2C2C2;
+  font-size: 14px;
+  line-height: 28px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+nav ul li:hover {
+  color: #868686;
+}
+
+main {
+  width: 1092px;
+  height: 283px;
+  display: flex;
+  align-items: center;
+  margin: 101px auto;
+}
+
+#titulo {
+  font-family: 'JetBrains Mono', monospace;
+  color: #FFF;
+  font-size: 36px;
+  line-height: 40px;
+  margin: 0 0 0 80px;
+  text-align: center;
+}
+
+#titulo span {
+  color: #00BFA6;
+}
+
+#corpo {
+  font-family: 'Open Sans', sans-serif;
+  color: #C2C2C2;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center;
+  margin: 59px 0 0 80px;
+}
+
+#corpo span {
+  color: #00BFA6;
+  font-weight: bold;
+}
+
+#line {
+ width: 600px;
+ height: 0;
+ margin: 157px auto 20px;
+ border: 1px #00BFA6 solid;
+}
+
+footer {
+  align-items: center;
+  text-align: center;
+  font-family: 'JetBrains Mono', monospace;
+  font-weight: normal;
+  color: #FFF;
+  font-size: 14px;
+  line-height: 28px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #FFF;
+}
+
+footer a:hover {
+  color: #969696;
+}
+
+ footer img {
+ display: flex;
+ margin: 0 0 20px 20px;
+ position: fixed;
+ bottom: 0;
+ opacity: 0.5;
+ }
+
+ #copyright {
+  font-size: 8px;
+  line-height: 50px;
+  font-weight: normal;
+  text-align: center;
+  color: #FFF;
+
+ }
